--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Escape Velocity</a></h1>
-							<p>A free responsive site template by HTML5 UP</p>
+							<h1><a href="index.html">xzrvr.dev</a></h1>
+							<p>a range of uninteresting projects</p>
 						</div>
 
 					<!-- Nav -->
